Update note to team_funding in Chronos-Chronos2.yml

--- a/model-metadata/Chronos-Chronos2.yml
+++ b/model-metadata/Chronos-Chronos2.yml
@@ -11,4 +11,4 @@ data_inputs: ECDC ERVISS, WHO FluID
 methods: Chronos-2 time series foundation model used in zero-shot mode with in-context cross learning between locations enabled.
 website_url: https://github.com/amazon-science/chronos-forecasting
 citation: "Ansari, A. F., Shchur, O., Küken, J., ... & Bohlke-Schneider, M. (2025). Chronos-2: From univariate to universal forecasting. arXiv preprint arXiv:2510.15821."
-note: Contribution made in personal capacity, not as an official AWS submission
+team_funding: Contribution made in personal capacity, not as an official AWS submission
